YAML-STANDARD/k3s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  selector:
    app: fastapi
  type: ClusterIP
  ports:
    - port: 5000
