YAML-STANDARD/k3s/fastapi/ingress.yaml
apiVersion: networking.k3s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
    - host: alexisber.cloudns.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
